# AAAChain

./: .gitignore  README.md  genesis.json
libraries/app/: database_api.cpp  impacted.cpp
libraries/app/include/graphene/app/: database_api.hpp
libraries/chain/: CMakeLists.txt  data_asset_evaluator.cpp  data_asset_object.cpp  db_init.cpp  db_notify.cpp
libraries/chain/include/graphene/chain/: config.hpp  data_asset_evaluator.hpp  data_asset_object.hpp  evaluator.hpp
libraries/chain/include/graphene/chain/protocol/: data_asset.hpp  operations.hpp  types.hpp
libraries/chain/protocol/: data_asset_opts.cpp  transaction.cpp  types.cpp
libraries/contract-engine/: list.md
libraries/contract-engine/contract/: hello.cpp  hello.wasm  hello.wast
libraries/contract-engine/engine/wasm-jit/: CMakeLists.txt  travis-build.sh
libraries/contract-engine/engine/wasm-jit/Source/Emscripten/: CMakeLists.txt  Emscripten.cpp
libraries/contract-engine/engine/wasm-jit/Source/Emscripten/lib/: chainbase.cpp  chainbase.hpp  print.cpp
libraries/contract-engine/engine/wasm-jit/Source/UnitTest/TestChainBase/: CMakeLists.txt  TestChainBase.cpp  TestChainBase.h
libraries/contract-engine/script/: build_engine_ubuntu.sh
libraries/contract-engine/wasm-jit/: CMakeLists.txt  travis-build.sh
libraries/net/include/graphene/net/: config.hpp
libraries/wallet/: wallet.cpp
libraries/wallet/include/graphene/wallet/: wallet.hpp
libraries/wavm/: travis-build.sh
tests/tests/: data_tests.cpp  fee_tests.cpp  operation_tests2.cpp
tests/wsapi/: api_acc_test.py  api_data_test.py
(+13 files in other folders)
